# WDM_GW_wavelets

./: .buildinfo  .gitignore  GitHub.html  LICENSE  README.md  WDM.code.discrete_wavelet_transform.html  WDM.code.html  WDM.code.plotting.html  WDM.code.time_delay_filters.html  WDM.code.utils.html  WDM.html  accuracy_truncated_transform.html  accuracy_truncated_transform.ipynb  benchmarking.html  benchmarking.ipynb  examples.html  filtering_and_glitch_removal.html  filtering_and_glitch_removal.ipynb  genindex.html  getting_started.html  getting_started.ipynb  index.html  m_equal_0_terms.html  modules.html  objects.inv  plotting_the_mother_wavelet.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  theory.html  time_delay_filters.html  time_delay_filters_demo.html  wavelet_transform_examples.html
.doctrees/: GitHub.doctree  WDM.code.discrete_wavelet_transform.doctree  WDM.code.doctree  WDM.code.plotting.doctree  WDM.code.time_delay_filters.doctree  WDM.code.utils.doctree  WDM.doctree  accuracy_truncated_transform.doctree  benchmarking.doctree  environment.pickle  examples.doctree  filtering_and_glitch_removal.doctree  getting_started.doctree  index.doctree  m_equal_0_terms.doctree  modules.doctree  plotting_the_mother_wavelet.doctree  theory.doctree  time_delay_filters.doctree  time_delay_filters_demo.doctree  wavelet_transform_examples.doctree
WDM/: __init__.py
WDM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_modules/: index.html
_sources/: WDM.code.discrete_wavelet_transform.rst.txt  WDM.code.plotting.rst.txt  WDM.code.rst.txt  accuracy_truncated_transform.ipynb.txt  examples.rst.txt  index.rst.txt  (+7 more)
(+63 files in other folders)
